--- a/app/views/user_payment_cards/_user_payment_card.html.erb
+++ b/app/views/user_payment_cards/_user_payment_card.html.erb
@@ -1,22 +1,22 @@
 <tr>
   <td>
     <% if user_payment_card.card_provider == 'VISA' %>
-      <%= icon 'cc-visa', class: "fa-lg" %>
+      <%= icon 'cc-visa', class: 'fa-lg' %>
     <% elsif user_payment_card.card_provider == 'MASTERCARD' %>
-      <%= icon 'cc-mastercard', class: "fa-lg" %>
+      <%= icon 'cc-mastercard', class: 'fa-lg' %>
     <% else %>
-      <%= icon 'credit-card', class: "fa-lg" %>
+      <%= icon 'credit-card', class: 'fa-lg' %>
     <% end %>
   <td><%= user_payment_card.decorate.pretty_number_alias %></td>
   <td><%= user_payment_card.decorate.expiration_date %></td>
   <td>
     <%# make_favorite %>
     <% if user_payment_card.favorite %>
-      <%= icon 'star', class: "fa-lg u-fill-blue" %>
+      <%= icon 'star', class: 'fa-lg u-fill-blue' %>
     <% else %>
       <%# FIXME: kidnapping style from locations. that is wrong in a lot of levels %>
-      <%= button_to make_favorite_user_payment_card_path( user_payment_card ), class: "locations-list__star-button u-pull-right", form_class: "u-inline" do %>
-        <%= icon 'star-o', class: "fa-lg" %>
+      <%= button_to make_favorite_user_payment_card_path( user_payment_card ), class: 'locations-list__star-button u-pull-right', form_class: 'u-inline' do %>
+        <%= icon 'star-o', class: 'fa-lg' %>
       <% end %>
     <% end %>
   </td>
@@ -26,7 +26,7 @@
   <td>
     <%# params: { 'user[user_payment_card][guid]' => user_payment_card.guid } %>
     <%# FIXME: evil to style directly in the html tags %>
-    <%= button_to user_payment_card, method: :delete, class: "button u-pull-right", form_class: "u-inline", data: { confirm: 'Are you sure?' } do %>
+    <%= button_to user_payment_card, method: :delete, class: 'button u-pull-right', form_class: 'u-inline', data: { confirm: 'Are you sure?' } do %>
       <%= icon 'trash', 'Slett' %>
     <% end %>
   </td>
