--- a/app/views/shared/_profile_quality_box.html.erb
+++ b/app/views/shared/_profile_quality_box.html.erb
@@ -34,7 +34,7 @@
 
     <div>
         <ol class="profile-quality-box__verifications-list">
-            <% if user.id_card_status == :verified %>
+            <% if user.has_confirmed_id? %>
                 <li>
                     <%= icon 'check', class: 'fa-lg profile-quality-box__icon' %>
                     <span>ID-kort</span>
