--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -30,7 +30,7 @@
             <div class="u-not-on-bigscreen u-push-down">
                 <%= render partial: "ad_booking_box", locals: { ad: @ad } %>
             </div>
-            <% if Plendit::Application.config.x.footer.show_facebook_buttons %>
+            <% if Plendit::Application.config.x.facebook_integration %>
                 <%= render partial: 'share_on_facebook' %>
             <% end %>
         </div>
