--- a/app/views/application_mailer/booking_accepted__to_renter.html.erb
+++ b/app/views/application_mailer/booking_accepted__to_renter.html.erb
@@ -13,7 +13,7 @@
   <tr> <td>Til:</td> <td><%= l @booking.ends_at, format: :shorter_datetime %></td> </tr>
   <tr> <td>Antall dager:</td> <td><%= @booking.days %></td> </tr>
   <tr> <td></td> <td></td> </tr>
-  <tr> <td>Utbetalt til deg:</td> <td><%= format_monetary_full_pretty @booking.sum_paid_by_renter, unit: 'kr' %></td> </tr>
+  <tr> <td>Utbetalt til deg:</td> <td><%= format_monetary_full_pretty @booking.sum_paid_by_renter %></td> </tr>
 </table>
 
 <p>
