Slightly nicer receipt page when filing a damage report

--- a/app/views/accident_reports/create.html.erb
+++ b/app/views/accident_reports/create.html.erb
@@ -1,5 +1,9 @@
-<p>Takk for at du sendt en skademelding!</p>
+<div class="container">
+    <div class="eight columns">
+        <div class="u-push-down">
+            <p>Skademeldingen er registrert, og dere blir kontaktet snart.</p>
 
-<p>Den ble registrert, og dere blir kontaktet snart.</p>
-
-<p><%= link_to "tilbake til din profil", users_path %>(?)</p>
+            <p><%= link_to "Tilbake til bookingen", @booking %></p>
+        </div>
+    </div>
+</div>
