Fixed link to damage report link

--- a/app/views/bookings/_booking_insurance_box.html.erb
+++ b/app/views/bookings/_booking_insurance_box.html.erb
@@ -2,7 +2,7 @@
     <h3 class="booking-insurance-box__title">Har det skjedd noe?</h3>
     <ul class="booking-insurance-box__list">
         <li>
-            <%= link_to "Meld skade", users_accident_reports_path %>
+            <%= link_to "Meld skade", booking_accident_reports_path(@booking) %>
         </li>
         <li>
             <a href="#">(FIXME: link finns ikke) Rapporter regelbrudd</a>
