Added request for boat lenght

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -40,7 +40,7 @@
         <div class="u-push-down-only">
             <%= f.label :body, 'Beskrivelse:' %>
             <% if @ad.category == 'boat' %>
-                <small>Dersom båten har motor skal båtens alder og antall hestekrefter skrives inn her. </small>
+                <small>Dersom båten har motor skal båtens lengde, alder og antall hestekrefter skrives inn her. </small>
             <% end %>
             <%= f.text_area :body, class: 'u-full-width in-form__description', data: { controller: 'autoSizeTextArea' } %>
             <small>Tips: Ved å bruke #hashtags i beskrivelsen blir annonsen enklere å finne i søket.</small>
