Adjusted style and strings for top bar when not logged in for better fit on small screens

--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -145,4 +145,12 @@ $top-bar-height: 52px;
         color: white;
         position: relative;
     }
+
+    &__anon {
+        vertical-align: sub;
+    
+        @media (max-width: 400px) {
+            font-size: smaller;
+        }
+    }
 }
