--- a/app/views/ads/_ad_status_box.html.erb
+++ b/app/views/ads/_ad_status_box.html.erb
@@ -1,5 +1,9 @@
 <div class="ad-status-box" id="ad-controls">
 
+    <% if ad.is_deletable? %>
+        <%= button_to 'Slett annonsen', users_ad_path(ad),   form_class: "ad-status-box__form", class: "ad-status-box__button button ", method: :delete, data: { confirm: 'Vil du virkelig slette annonsen?' } %>
+    <% end %>
+
     <% if ad.published? %>
         <%= button_to 'Rediger annonsen', edit_ad_path(ad),  form_class: "ad-status-box__form", class: "ad-status-box__button button ", method: :get,  data: { confirm: 'Hvis du redigerer annonsen, vil den bli sendt til kontroll på nytt. Er du sikker på at du vil redigere annonsen din?' } %>
         <%= button_to 'Gjør usynlig',   pause_ad_path(ad), form_class: "ad-status-box__form", class: "ad-status-box__button button ", method: :get,  data: { confirm: 'Hvis du gjør annonsen usynlig, blir den ikke lenger søkbar. Folk du deler den med, kan fortsatt se og leie den. Er du sikker på at du vil gjøre annonsen din usynlig?' } %>
