--- a/app/views/users/payment.html.erb
+++ b/app/views/users/payment.html.erb
@@ -1,39 +1,57 @@
 <%= render partial: "shared/personal_bar", locals: {selected: 'Betaling'} %>
 
-<p id="notice"><%= notice %></p>
+<p id="notice">
+    <%= notice %>
+</p>
 
 <% if current_user.mangopay_provisioned? %>
-<div class="container">
-    <div class="row">
-        <div class="eight columns">
-            <%= render partial: 'user_payment_cards/list' %>
-            <%= render partial: 'users/show_user_payment_account' %>
-            <%= render partial: 'financial_transactions/financial_transaction_list' %>
-        </div>
+    <div class="container">
+        <div class="row">
+            <div class="eight columns">
+                <%= render partial: 'user_payment_cards/list' %>
+                <%= render partial: 'users/show_user_payment_account' %>
+                <%= render partial: 'financial_transactions/financial_transaction_list' %>
+            </div>
 
-        <div class="four columns">
-            <%= render partial: 'users/payment/payout_wallet_balance' %>
+            <div class="four columns">
+                <%= render partial: 'users/payment/payout_wallet_balance' %>
+            </div>
         </div>
     </div>
-</div>
 <% else %>
-<div class="container">
-    <div class="row">
-        <div class="eight columns">
-          <%= render layout: 'gray_box', locals: {title: 'Betaling', id: 'payment'} do %>
-            Du må verifisere din e-postadresse og ditt mobilnummer før du kan sende og motta penger. 
-
-            <p>
-                <small>Når profilen din er komplett og vi har bekreftet din e-postadresse og ditt mobilnummer, kan du legge inn ditt kontonummer og ditt kredittkort.</small>
-            </p>
-            Før du kan registrere ditt kontonummer, må du:
-            <ul>
-              <% unless current_user.email_verified? %> <li><%= link_to 'Bekrefte din e-postadresse.', edit_users_path( anchor: 'personal-info' ) %> </li> <% end %>
-              <% unless current_user.phone_verified? %> <li><%= link_to 'Bekrefte ditt mobilnummer.', edit_users_path( anchor: 'personal-info' ) %></li> <% end %>
-              <% unless current_user.has_address? %> <li><%= link_to 'Legge inn din adresse.', edit_users_path( anchor: 'personal-info' ) %></li><% end %>
-            </ul>
-          <% end %>
+    <div class="container">
+        <div class="row">
+            <div class="eight columns">
+              <%= render layout: 'gray_box', locals: {title: 'Betaling', id: 'payment'} do %>
+                Du må verifisere din e-postadresse og ditt mobilnummer før du kan sende og motta penger. 
+                <p>
+                    <small>
+                        Når profilen din er komplett og vi har bekreftet din
+                        e-postadresse og ditt mobilnummer, kan du legge inn ditt
+                        kontonummer og ditt kredittkort.
+                    </small>
+                </p>
+                <p>
+                    Før du kan registrere ditt kontonummer, må du:
+                </p>
+                <ul>
+                    <% unless current_user.email_verified? %>
+                        <li>
+                            <%= link_to 'Bekrefte din e-postadresse.', edit_users_path( anchor: 'personal-info' ) %>
+                        </li>
+                    <% end %>
+                    <% unless current_user.phone_verified? %>
+                        <li>
+                            <%= link_to 'Bekrefte ditt mobilnummer.', edit_users_path( anchor: 'personal-info' ) %>
+                        </li> <% end %>
+                    <% unless current_user.has_address? %>
+                        <li>
+                            <%= link_to 'Legge inn din adresse.', edit_users_path( anchor: 'personal-info' ) %>
+                        </li>
+                    <% end %>
+                </ul>
+              <% end %>
+            </div>
         </div>
     </div>
-</div>
 <% end %>
