--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -15,21 +15,7 @@
 
 <%= render layout: 'gray_box', locals: {title: 'Hvem er vi?'} do %>
     <div class="about-bios">
-
-        <div class="about-bios__box">
-            <div class="about-bio">
-                <div class="about-bio__image">
-                    <%= plendbot_avatar(:huge) %>
-                </div>
-                <div class="about-bio__prose">
-                    <h3 class="about-bio__name">Plendosarus Rex</h3>
-                    <p>
-                        Rawr!
-                    </p>
-                </div>
-            </div>
-        </div>
-
+        <%= render partial: 'bio_box', collection: @employees, as: :employee %>
     </div>
 <% end %>
 
