Added image count to first thumb

--- a/app/assets/stylesheets/ads.scss
+++ b/app/assets/stylesheets/ads.scss
@@ -200,6 +200,20 @@
     width: 90px;
     height: 60px;
     margin-right: $standard-spacing;
+    position: relative;
+
+    &__count {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        font-weight: bold;
+        line-height: 50px;
+        text-align: center;
+        color: white;
+        background-color: rgba(0,0,0,0.2);
+    }
+
+
     //display: inline-block;
 
      // @media (min-width: $bigscreen) {
