--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -22,7 +22,9 @@
             <div class="gallery-thumb-bar" data-thumb-bar>
                 <div class="gallery-thumb" data-image-index="0">
                     <%= image_tag @ad.ad_images.first.image.url(:thumb), size: '90x60' %>
-                    <%= @ad.ad_images.size %> bilder.
+                    <span class="gallery-thumb__count">
+                        <%= @ad.ad_images.size %> bilder
+                    </span>
                 </div>
                 <% @ad.ad_images.limit(9).offset(1).each_with_index do |image, n| %>
                     <div class="gallery-thumb <%= "gallery-thumb--no-#{n + 1}" %>"
