--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
     <%= csrf_meta_tags %>
 
     <% cache 'analytics' do %>
-        <%= render partial: "google_analytics_tag" %>
+        <%= render partial: 'google_analytics_tag' %>
     <% end %>
 </head>
 <body data-controller="helpToggler">
