--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
     <%= metamagic %>
 
-    <%= favicon_link_tag       'logos/favicon_raw.png' %>
+    <%= favicon_link_tag       'logos/favicon_raw.png', id: 'favicon' %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= stylesheet_link_tag    'http://fonts.googleapis.com/css?family=Lato:300,400,700' %>
 
