--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,10 @@
 
     <%= favicon_link_tag       'logos/favicon_raw.png', id: 'favicon' %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= stylesheet_link_tag    'http://fonts.googleapis.com/css?family=Lato:300,400,700' %>
+    <%= stylesheet_link_tag    'https://fonts.googleapis.com/css?family=Lato:300,400,700' %>
 
     <% if @page_has_maps %>
-        <%= javascript_include_tag "//maps.googleapis.com/maps/api/js?key=#{Rails.configuration.x.map.google_maps_js_api_key}&language=#{PLENDIT_COUNTRY_CODE}" %>
+        <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Rails.configuration.x.map.google_maps_js_api_key}&language=#{PLENDIT_COUNTRY_CODE}" %>
         <%= javascript_include_tag 'maps' %>
     <% end %>
 
