Added page to backstage that shows active bookings

--- a/app/views/backstage/index.html.erb
+++ b/app/views/backstage/index.html.erb
@@ -32,6 +32,7 @@
                 <li><%= link_to 'Broadcast',   broadcast_path %> - Change broadcast message</li>
                 <li><%= link_to 'Pending ads', pending_ad_reviews_path %> - Review submitted ads</li>
                 <li><%= link_to 'Pending KYC', pending_kyc_reviews_path %> - Review submitted documents</li>
+                <li><%= link_to 'Boat admin', boat_admin_path %> - Find boat bookings and details</li>
             </ul>
 
         </div>
